# SFML_Raytracer

./: .gitignore  CMakeLists.txt  README.md  main.cpp  vcpkg.json
src/: aabb.h  bvh.h  camera.h  hittable.h  hittable_list.h  image.h  interval.h  main.cpp  material.h  quad.h  ray.cpp  ray.h  raytracer.h  sphere.h  texture.h
